--- a/_bitcoin_Twitter_Analysis.ipynb
+++ b/_bitcoin_Twitter_Analysis.ipynb
@@ -38,10 +38,10 @@
       "cell_type": "code",
       "source": [
         "#Get the twitter API credentials\n",
-        "consumer_key = 'TtklIRVTkb9EolfQtKQC46aTi'\n",
-        "consumer_secret = 'A4XMN85zg9nAGdTrWhREd8NmqQNHbC0WCyXrfxCMDMdNq1jodj'\n",
-        "access_token = '285151514-vNy2WnkHolj7ndhCjR4ffQA1bptzJCx2TEsSCzcg'\n",
-        "access_token_secret = 'F9Bps0R3tmOlTZl8hlM6Hx2LqNZ25GjdeSREdwQ2ed6ci'"
+        "consumer_key = 'xxxxxxxxxxxxxxxxxxxxxxxxxx'\n",
+        "consumer_secret = 'xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx'\n",
+        "access_token = 'xxxxxxxx-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx'\n",
+        "access_token_secret = 'xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx'\n"
       ],
       "metadata": {
         "id": "4PlBhWzwSWNd"
